--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,13 @@
 
 html, body {
     height: 100%;
+    font-family: 'Roboto', sans-serif;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .main-container {
@@ -31,10 +38,20 @@ html, body {
 
 aside {
     height: 95vh;
+    max-height: 95vh;
     overflow: scroll;
     width: 100%;
-    background-color: #333;
+    background-color: #1a1c21;
     border-radius: 15px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) { 
+    aside {
+        height: 40vh;
+        max-height: 40vh;
+    }
 }
 
 #loot-bag {
@@ -47,11 +64,40 @@ aside {
     font-size: 12px;    
 }
 
+aside h2 {
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
 #loot-bag h3 {
     padding-bottom: 10px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+#loot-bag h3 .material-icons {
+    font-size: 25px;
+    padding-right: 2px;
+}
+
+#loot-bag h3 .kc {
+    font-size: 15px;
+    font-weight: bold;
+    padding-left:10px;
 }
 
 #loot-bag .monsterLootBag {
     border-bottom: 1px solid white;
     margin-bottom: 15px;
+}
+
+#loot-bag .lootHolder {
+    width: 100%;
+}
+
+#loot-bag .lootHolder.show {
+    display: flex;
 }
